# mgit

./: .gitignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  fix_test_imports.ps1  progress.md  temp_types.rs
.ai/: MEMORY.md  SNAPSHOT.md
.github/workflows/: release-cli.yml  release-gui.yml  release-setup.yml  release.yml  test-cli-deprecated.yml  test-cli.yml  test-core.yml
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
cli/src/commands/: clean.rs  del_branch.rs  fetch.rs  init.rs  list_files.rs  log_repos.rs  ls_files.rs  mod.rs  new_branch.rs  new_tag.rs  snapshot.rs  sync.rs  track.rs
cli/src/config/: mod.rs  repo.rs  repos.rs
cli/src/git/: mod.rs
cli/src/utils/: cmd.rs  logger.rs  mod.rs  progress.rs
cli/tests/: cli_clean.rs  cli_fetch.rs  cli_snapshot.rs  cli_sync.rs  cli_track.rs  common.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/core/: git.rs  repo.rs  repos.rs
core/src/ops/: clean.rs  del_branch.rs  fetch.rs  init.rs  list_files.rs  log_repos.rs  mod.rs  new_branch.rs  new_tag.rs  snapshot.rs  sync.rs  track.rs
core/src/utils/: cmd.rs  error.rs  label.rs  logger.rs  mod.rs  path.rs  progress.rs  style_message.rs
core/tests/: clean_test.rs  common.rs  fetch_test.rs  snapshot_test.rs  sync_test.rs  track_test.rs
docs/: v1-产品技术框架设计.md  v1-产品技术框架设计大纲.md  v1-产品设计.md  v1-产品设计大纲.md  v2-Release-2.0.0-beta.1.md  v2-UI框架选型分析egui和tauri.md  v2-重构内容和计划.md
docs/plan/: README.md
gitea_compose/: Dockerfile  Dockerfile.aarch64  Dockerfile.amd64  docker-compose.yml  entry.sh  env-template.sh  mgit.bundle  start_gitea.sh
gui/: Cargo.toml  build.rs
gui/src/: editor.rs  logger.rs  main.rs  progress.rs
gui/src/apps/: about_window.rs  app.rs  defines.rs  dialog.rs  error_window.rs  mod.rs  options_window.rs  settings.rs
gui/src/editor/: about_window.rs  app.rs  configuration.rs  defines.rs  error_window.rs  labels.rs  layout.rs  menu_bar.rs  misc.rs  mod.rs  ops.rs  quick_bar.rs  repositories.rs  settings.rs  widgets.rs  window.rs
gui/src/editor/widgets/: mod.rs  progress_bar.rs
gui/src/editor/window/: about.rs  dialog.rs  error.rs  new_branch.rs  new_tag.rs  options.rs
gui/src/toml_settings/: mod.rs  project_settings.rs  user_settings.rs
gui/src/utils/: command.rs  defines.rs  logger.rs  mod.rs  progress.rs
mgit/: Cargo.toml
mgit-cli/: Cargo.toml
mgit-cli/src/: cli.rs  main.rs
mgit-cli/src/commands/: clean.rs  del_branch.rs  fetch.rs  init.rs  list_files.rs  log_repos.rs  mod.rs  new_branch.rs  new_tag.rs  snapshot.rs  sync.rs  track.rs  upgrade.rs
mgit-cli/src/options/: clean.rs  fetch.rs  init.rs  list_files.rs  mod.rs  snapshot.rs  sync.rs  track.rs
mgit-cli/src/term/: mod.rs  progress.rs
mgit-cli/tests/: cli_clean.rs  cli_snapshot.rs  cli_sync.rs  common.rs
mgit-core/: Cargo.toml
mgit-core/src/: error.rs  lib.rs  ops.rs  option.rs  options.rs
mgit-core/src/config/: mgit_config.rs  mod.rs  repo_config.rs
mgit-core/src/core/: git.rs  mod.rs  repo.rs
mgit-core/src/git/: mod.rs  status.rs  types.rs
mgit-core/src/ops/: clean.rs  del_branch.rs  fetch.rs  init.rs  list_files.rs  mod.rs  new_branch.rs  new_tag.rs  snapshot.rs  sync.rs  track.rs
mgit-core/src/utils/: cmd.rs  logger.rs  mod.rs  process_guard.rs  style_message.rs
mgit-core/tests/: clean_test.rs  common.rs  fetch_test.rs  snapshot_test.rs  sync_test.rs  track_test.rs
mgit-gui/: Cargo.toml  README.md  build.rs
mgit-gui/src/: app.rs  main.rs
mgit-gui/src/app/: context.rs  events.rs  repo_manager.rs  session_manager.rs
mgit-gui/src/configs/: mod.rs  project.rs  user.rs
mgit-gui/src/editor/: defines.rs  error_window.rs  options_window.rs
mgit-gui/src/ui/: layout.rs  mod.rs  style.rs
mgit-gui/src/ui/components/: mod.rs  progress.rs  text.rs
mgit-gui/src/ui/panels/: configuration_panel.rs  labels_panel.rs  menu_bar_panel.rs  mod.rs  quick_bar_panel.rs  repositories_panel.rs
mgit-gui/src/ui/windows/: about.rs  base.rs  dialog.rs  error.rs  host.rs  manager.rs  mod.rs  new_branch.rs  new_tag.rs  options.rs  repo_selection.rs  upgrade.rs
mgit-gui/src/utils/: fs.rs  logger.rs  mod.rs  progress.rs  runtime.rs  system.rs
mgit/src/: error.rs  lib.rs
mgit/src/config/: mgit_config.rs  mod.rs  repo_config.rs  tests.rs
mgit/src/git/: remote.rs  repo.rs  workflows.rs
mgit/src/ops/: clean.rs  del_branch.rs  fetch.rs  init.rs  list_files.rs  log_repos.rs  mod.rs  new_branch.rs  new_tag.rs  snapshot.rs  sync.rs  track.rs
mgit/src/utils/: cmd.rs  label.rs  mod.rs  path.rs  process_guard.rs  progress.rs  shell.rs  tests.rs  upgrade_check.rs
mgit/tests/: clean_test.rs  common.rs  fetch_test.rs  snapshot_test.rs  sync_test.rs  track_test.rs
scripts/: cross_for_linux  install-cli.sh  install.sh
scripts/linux/: cross_for_linux
scripts/macos/: Info.plist  build_dmg.sh
scripts/windows/: mgit.nsi
src/: cli.rs  main.rs
src/commands/: clean.rs  fetch.rs  init.rs  mod.rs  snapshot.rs  sync.rs  track.rs
tests/: Init_test.rs  cli_clean.rs  cli_init.rs  cli_snapshot.rs  cli_sync.rs  cli_track.rs
tests/gitea-env/: Dockerfile.aarch64  Dockerfile.amd64  docker-compose.yml  env-template.sh  start_gitea.sh
util/: cross_for_linux
