[workspace]
members = [
    "core",
    "cli",
    "gui",
]
resolver = "2"

[workspace.package]
version = "1.5.1"
edition = "2021"
rust-version = "1.76.0"
repository = "https://github.com/funny/mgit"


[workspace.dependencies]
egui = "0.19.0"
eframe = { version ="0.19.0",features = ["persistence"] }
egui_extras = { version ="0.19.0", features = ["image"] }
image = { version = "0.24.5",features = ["jpeg", "png"] }
rfd = "0.10"
console = { version = "0.15.2", features = ["ansi-parsing"], default_features = false }
poll-promise = "0.2.0"
strip-ansi-escapes = "0.1.1"
anyhow = "1"
rayon = "1.5"
home = "0.5.4"
toml = "0.5.9"
toml_edit = { version = "0.14.4", features = ["serde", "easy"] }
serde = { version = "1.0.145", features = ["derive"] }
sha256 = "1.1.1"
filetime = "0.2.18"
semver = "1.0.16"
regex = "1.6.0"
log4rs = "1.2.0"
log = "0.4.19"
lazy_static = "1.4.0"
globset = "0.4.9"
walkdir = "2.3.2"
assert_cmd = "2.0.4"
atomic-counter = "1.0.1"
term_size = "0.3.2"
ansi_term = "0.12.1"
thiserror = "1.0.4"
clap = { version = "4.0.8", features = ["derive", "cargo"] }
indicatif = "0.17.2"
color-eyre = "0.6.2"

mgit-core = { path = "./core" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
