[workspace]
members = ["mgit", "mgit-cli", "mgit-gui"]
resolver = "2"

[workspace.package]
version = "2.0.0-beta.3"
edition = "2021"
rust-version = "1.92.0"
repository = "https://github.com/funny/mgit"


[workspace.dependencies]
# UI Stack
egui = "0.33.3"
eframe = { version = "0.33.3", features = ["persistence"] }
egui_extras = { version = "0.33.3", features = ["image"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }
rfd = "0.17.2"

# Async Stack
tokio = { version = "1.43", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "local-time",
] }
tracing-appender = "0.2.3"

# Error Handling
snafu = { version = "0.8.5", features = ["backtrace"] }
anyhow = "1.0.95"

# Utilities
clap = { version = "4.5.54", features = ["derive", "cargo", "env"] }
toml = "0.8.20"
toml_edit = { version = "0.24.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
globset = "0.4.18"
walkdir = "2.5.0"
indicatif = "0.18.3"
console = { version = "0.16.2", features = ["ansi-parsing"] }
ansi_term = "0.12.1"
home = "0.5.12"
sha256 = "1.6.0"
semver = "1.0.27"
poll-promise = "0.3.0"                                               # Keep for potential GUI bridging
strip-ansi-escapes = "0.2.1"
filetime = "0.2.26"

# Internal Crates
mgit = { path = "./mgit" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
