[package]
name = "mgit-cli"
version = "1.2.2"
edition = "2021"

[[bin]]
name = "mgit"
path = "src/main.rs"

[dependencies]
mgit-core = { path = "../core" }
log = "0.4.17"
log4rs = "1.2.0"
clap = { version = "4.0.8", features = ["derive", "cargo"] }
indicatif = "0.17.2"
console = { version = "0.15.2", features = ["ansi-parsing"], default_features = false }
term_size = "0.3.2"
lazy_static = "1.4.0"
color-eyre = "0.6.2"
anyhow = "1.0.75"
