[package]
name = "mgit-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mgit"
path = "src/main.rs"

[dependencies]
log.workspace = true
log4rs.workspace = true
clap.workspace = true
indicatif.workspace = true
console.workspace = true
term_size.workspace = true
lazy_static.workspace = true
color-eyre.workspace = true
anyhow.workspace = true

mgit-core.workspace = true
