[package]
name = "mgit-core"
version = "1.2.0"
edition = "2021"

[lib]
name = "mgit"

[dependencies]
log = "0.4.17"
log4rs = "1.2.0"
anyhow = { version = "1.0.65", features = ["backtrace"] }
globset = "0.4.9"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
toml_edit = { version = "0.14.4", features = ["serde", "easy"] }
walkdir = "2.3.2"
assert_cmd = "2.0.4"
console = { version = "0.15.2", features = ["ansi-parsing"], default_features = false }
atomic-counter = "1.0.1"
rayon = "1.5"
regex = "1.6.0"
term_size = "0.3.2"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
thiserror = "1.0.4"

[features]
use_gitea = []
