[package]
name = "mgit-core"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "mgit"

[dependencies]
log.workspace = true
log4rs.workspace = true
anyhow.workspace = true
globset.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
walkdir.workspace = true
assert_cmd.workspace = true
console.workspace = true
atomic-counter.workspace = true
rayon.workspace = true
regex.workspace = true
term_size.workspace = true
ansi_term.workspace = true
lazy_static.workspace = true
thiserror.workspace = true

[features]
use_gitea = []
