[package]
name = "mgit-gui"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
egui_extras.workspace = true
image.workspace = true
rfd.workspace = true
console.workspace = true
poll-promise.workspace = true
strip-ansi-escapes.workspace = true
anyhow.workspace = true
rayon.workspace = true
home.workspace = true
toml.workspace = true
toml_edit.workspace = true
serde = { version = "1.0.145", features = ["derive"] }
sha256.workspace = true
filetime.workspace = true
semver.workspace = true
regex.workspace = true
log4rs.workspace = true
log.workspace = true
lazy_static.workspace = true

mgit-core.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
dev = []

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
dockerfile = "../gitea_compose/Dockerfile"
