[package]
name = "mgit-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "mgit"
path = "src/main.rs"

[dependencies]
# Async & System
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
snafu.workspace = true

# Utilities
clap.workspace = true
indicatif.workspace = true
console.workspace = true
home = "0.5"

# Internal
mgit.workspace = true
ansi_term.workspace = true
